--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "xstream": "^6.4.1"
   },
   "devDependencies": {
+    "@types/core-js": "^0.9.34",
+    "@types/node": "^6.0.45",
     "awesome-typescript-loader": "^2.2.4",
     "css-loader": "^0.25.0",
     "cycle-restart": "0.0.14",
@@ -37,6 +39,7 @@
     "postcss": "^5.2.4",
     "postcss-loader": "^0.13.0",
     "rimraf": "^2.5.4",
+    "snabbdom-jsx": "^0.3.1",
     "tslint": "^3.15.1",
     "tslint-loader": "^2.1.5",
     "typescript": "^2.0.3",
