--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "xstream": "^6.4.1"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.45",
     "awesome-typescript-loader": "^2.2.4",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-syntax-jsx": "^6.13.0",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-preset-es2015": "^6.16.0",
     "css-loader": "^0.25.0",
     "cycle-restart": "0.0.14",
     "font-loader": "^0.1.2",
@@ -43,7 +47,6 @@
     "tslint": "^3.15.1",
     "tslint-loader": "^2.1.5",
     "typescript": "^2.0.3",
-    "typings": "^1.4.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2"
   },
@@ -52,7 +55,6 @@
     "clean": "rimraf build",
     "build:webpack": "NODE_ENV=production node ./node_modules/webpack/bin/webpack.js --config webpack.prod.js --progress --colors --bail",
     "build": "npm run clean && npm run build:webpack && npm run build:testSuite",
-    "shrinkwrap": "npm prune && rm -f npm-shrinkwrap.json && npm shrinkwrap --dev",
-    "postinstall": "node ./node_modules/typings/dist/bin.js prune && node ./node_modules/typings/dist/bin.js install"
+    "shrinkwrap": "npm prune && rm -f npm-shrinkwrap.json && npm shrinkwrap --dev"
   }
 }
