--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,21 +10,16 @@
     "forceConsistentCasingInFileNames": true,
     "allowUnreachableCode": false,
     "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
+    // "noUnusedLocals": true, // Disable because of the snabdom requires
     "allowUnusedLabels": false,
     "noUnusedParameters": true,
     "module": "commonjs",
-    "jsx": "react",
-    "reactNamespace": "JSX",
-    "target": "ES5",
+    "jsx": "preserve",
+    "target": "es2015",
     "outDir": "lib/",
     "typeRoots": [
       "node_modules/@types"
     ]
-    // "types": [
-    //   "node", // this allows us to use require globally but then breaks ES6 native calls, so we might need to add that
-    // ]
-
   },
   "formatCodeOptions": {
     "indentSize": 2,
@@ -33,4 +28,9 @@
   "files": [
     "src/index.ts"
   ]
+  // ,
+  // "awesomeTypescriptLoaderOptions" : {
+  //   "useBabel": true,
+  //   "useCache": true
+  // }
 }
