--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^6.0.45",
+    "@types/react": "^0.14.41",
     "awesome-typescript-loader": "^2.2.4",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
