--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,10 +27,9 @@
   },
   "files": [
     "src/index.ts"
-  ]
-  // ,
-  // "awesomeTypescriptLoaderOptions" : {
-  //   "useBabel": true,
-  //   "useCache": true
-  // }
+  ],
+  "awesomeTypescriptLoaderOptions" : {
+    "useBabel": true,
+    "useCache": true
+  }
 }
